<resources>
    <string name="app_name">Court Counter</string>
    <string name="_0">0</string>
    <string name="point1">1 point</string>
    <string name="_2_points">2 points</string>
    <string name="_3_points">3 points</string>
    <string name="team_a">Team A</string>
    <string name="team_b">Team B</string>
    <string name="reset">reset</string>
    <string name="fouls">fouls</string>
    <string name="corners">corners</string>
    <string name="assists">assists</string>
    <string name="rebounds">rebounds</string>
</resources>
