<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    tools:context="com.example.android.courtcounter.CourtCounter">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_color"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/teamsScoreView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="@dimen/width_0"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/team_a"
                        style="@style/TeamName"
                        android:text="@string/team_a"/>

                    <TextView
                        android:id="@+id/team_a_score"
                        style="@style/TeamScore"
                        android:text="@string/_0"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="@dimen/width_0"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/team_b"
                        style="@style/TeamName"
                        android:text="@string/team_b" />

                    <TextView
                        android:id="@+id/team_b_score"
                        style="@style/TeamScore"
                        android:text="@string/_0" />


                </LinearLayout>


            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_0"
                android:layout_weight="1">

                <Button
                    android:id="@+id/point3_button_a"
                    style="@style/ButtonsA"
                    android:onClick="addThreeForTeamA"
                    android:text="@string/_3_points" />

                <TextView
                    android:id="@+id/team_a_3"
                    style="@style/MiniDisplaysA"
                    android:layout_toEndOf="@id/point3_button_a"
                    android:layout_toRightOf="@id/point3_button_a"
                    android:text="@string/_0" />

                <TextView
                    android:id="@+id/team_b_3"
                    style="@style/MiniDisplaysB"
                    android:layout_toLeftOf="@id/point3_button_b"
                    android:layout_toStartOf="@id/point3_button_b"
                    android:text="@string/_0" />

                <Button
                    android:id="@+id/point3_button_b"
                    style="@style/ButtonsB"
                    android:onClick="addThreeForTeamB"
                    android:text="@string/_3_points" />


            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_1"
                android:layout_margin="@dimen/margin_4"
                android:background="@android:color/darker_gray" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_0"
                android:layout_weight="1">

                <Button
                    android:id="@+id/point2_button_a"
                    style="@style/ButtonsA"
                    android:onClick="addTwoForTeamA"
                    android:text="@string/_2_points" />

                <TextView
                    android:id="@+id/team_a_2"
                    style="@style/MiniDisplaysA"
                    android:layout_toEndOf="@id/point2_button_a"
                    android:layout_toRightOf="@id/point2_button_a"
                    android:text="@string/_0" />

                <TextView
                    android:id="@+id/team_b_2"
                    style="@style/MiniDisplaysB"
                    android:layout_toLeftOf="@id/point2_button_b"
                    android:layout_toStartOf="@id/point2_button_b"
                    android:text="@string/_0" />

                <Button
                    android:id="@+id/point2_button_b"
                    style="@style/ButtonsB"
                    android:onClick="addTwoForTeamB"
                    android:text="@string/_2_points" />


            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_1"
                android:layout_margin="@dimen/margin_4"
                android:background="@android:color/darker_gray" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_0"
                android:layout_weight="1">

                <Button
                    android:id="@+id/point1_button_a"
                    style="@style/ButtonsA"
                    android:onClick="addOneForTeamA"
                    android:text="@string/point1"/>

                <TextView
                    android:id="@+id/team_a_1"
                    style="@style/MiniDisplaysA"
                    android:layout_toEndOf="@id/point1_button_a"
                    android:layout_toRightOf="@id/point1_button_a"
                    android:text="@string/_0" />

                <TextView
                    android:id="@+id/team_b_1"
                    style="@style/MiniDisplaysB"
                    android:layout_toLeftOf="@id/point1_button_b"
                    android:layout_toStartOf="@id/point1_button_b"
                    android:text="@string/_0" />

                <Button
                    android:id="@+id/point1_button_b"
                    style="@style/ButtonsB"
                    android:onClick="addOneForTeamB"
                    android:text="@string/point1" />


            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_1"
                android:layout_margin="@dimen/margin_4"
                android:background="@android:color/darker_gray" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_0"
                android:layout_weight="1">

                <Button
                    android:id="@+id/assist_button_a"
                    style="@style/ButtonsA"
                    android:onClick="assistForTeamA"
                    android:text="@string/assists" />

                <TextView
                    android:id="@+id/team_a_assist"
                    style="@style/MiniDisplaysA"
                    android:layout_toEndOf="@id/assist_button_a"
                    android:layout_toRightOf="@id/assist_button_a"
                    android:text="@string/_0" />

                <TextView
                    android:id="@+id/team_b_assist"
                    style="@style/MiniDisplaysB"
                    android:layout_toLeftOf="@id/assist_button_b"
                    android:layout_toStartOf="@id/assist_button_b"
                    android:text="@string/_0" />

                <Button
                    android:id="@+id/assist_button_b"
                    style="@style/ButtonsB"
                    android:onClick="assistForTeamB"
                    android:text="@string/assists" />


            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_1"
                android:layout_margin="@dimen/margin_4"
                android:background="@android:color/darker_gray" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_0"
                android:layout_weight="1">

                <Button
                    android:id="@+id/rebound_button_a"
                    style="@style/ButtonsA"
                    android:onClick="reboundForTeamA"
                    android:text="@string/rebounds" />

                <TextView
                    android:id="@+id/team_a_rebound"
                    style="@style/MiniDisplaysA"
                    android:layout_toEndOf="@id/rebound_button_a"
                    android:layout_toRightOf="@id/rebound_button_a"
                    android:text="@string/_0" />

                <TextView
                    android:id="@+id/team_b_rebound"
                    style="@style/MiniDisplaysB"
                    android:layout_toLeftOf="@id/rebound_button_b"
                    android:layout_toStartOf="@id/rebound_button_b"
                    android:text="@string/_0"/>

                <Button
                    android:id="@+id/rebound_button_b"
                    style="@style/ButtonsB"
                    android:onClick="reboundForTeamB"
                    android:text="@string/rebounds" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_1"
                android:layout_margin="@dimen/margin_4"
                android:background="@android:color/darker_gray" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_0"
                android:layout_marginBottom="@dimen/margin_12"
                android:layout_weight="1">

                <Button
                    android:id="@+id/fouls_button_a"
                    style="@style/ButtonsA"
                    android:onClick="foulForTeamA"
                    android:text="@string/fouls" />

                <TextView
                    android:id="@+id/team_a_foul"
                    style="@style/MiniDisplaysA"
                    android:layout_toEndOf="@id/fouls_button_a"
                    android:layout_toRightOf="@id/fouls_button_a"
                    android:text="@string/_0" />

                <TextView
                    android:id="@+id/team_b_foul"
                    style="@style/MiniDisplaysB"
                    android:layout_toLeftOf="@id/fouls_button_b"
                    android:layout_toStartOf="@id/fouls_button_b"
                    android:text="@string/_0" />

                <Button
                    android:id="@+id/fouls_button_b"
                    style="@style/ButtonsB"
                    android:onClick="foulForTeamB"
                    android:text="@string/fouls" />
            </RelativeLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/margin_12"
                android:background="@color/reset_button_color"
                android:onClick="reset"
                android:text="@string/reset" />
        </LinearLayout>


</ScrollView>


